--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,8 @@
 [build]
   functions = "functions/"
 [dev]
-  publish = "workshop/"
+  publish = "solution/"
+[[redirects]]
+  from = "/submit/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
